5) kernel: ralink_wifi: xxxx: kick sta at rssi low rework with avgRssi and RssiSample.<br>
6) kernel: ralink_wifi: xxxx: always set ForceNonQoS flag for low rate pkts.<br>
7) kernel: ralink_wifi: xxxx: add configurable delay in kick STA by low RSSI (if in this interval all data frames have low rssi - kick STA).<br>
8) kernel: ralink_wifi: 76x2: DRS_TX_QUALITY_WORST_BOUND set to 8 as all others (this mix rate at train down).<br>
9) kernel: vfs: remove incorrect debugging WARN in prepend_path.<br>
10) kenrel: net: af_inet: only check perm protocol when register proto.<br>
11) kernel: net: af_unix: return data from multiple SKBs on recv() with MSG_PEEK flag.<br>
12) kernel: net: route: fix behaviour of unreachable, blackhole and prohibit routes.<br>
13) kernel: net: ipv6: add RT6_LOOKUP_F_IFACE flag if oif is set.<br>
14) kernel: net: ipv4/6: compute net once in some cases.<br>
15) kernel: net: ipip, sit: fix ipv4_update_pmtu calls.<br>
16) kernel: net: fix skb csum races when peeking.<br>
17) kernel: net: Initialize flow flags in input path.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add nodogsplash config in webui->hotspot (select chillispot or nodogsplash mode).<br>
3) need review, experiments with new roaming code in MT76x2 driver and implement to WebUI.<br>
4) need add multiif support in iappd daemon.<br>
5) need add subchannel select for 5GHz module.<br>
6) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
7) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
9) in fair fair future: need add perip shaper script and webui .<br>
10) in fair fair future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>