@@ -1350,6 +1350,7 @@
 15) kernel: net: ipip, sit: fix ipv4_update_pmtu calls.<br>
 16) kernel: net: fix skb csum races when peeking.<br>
 17) kernel: net: Initialize flow flags in input path.<br>
+18) kernel: net: unix/caif: sk_socket can disappear when state is unlocked.<br>
 <br>
 <br>
 <b>TODO:</b><br>
